Agregados productos prueba, funcion search

--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
           </button>
         </div>
       </form>
+      <!-- TABLA -->
+      <div class="mt-5">
+        <h2>Resultados de Búsqueda</h2>
+        <div id="resultsTable"></div>
+      </div>
     </div>
     <script src="shoppingcart.js"></script>
     <script
