--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </form>
       <!-- TABLA -->
       <div class="mt-5">
-        <h2>Resultados de Búsqueda</h2>
+        <h2 id="searchTitle" style="display: none">Resultados de Búsqueda</h2>
         <div id="resultsTable"></div>
       </div>
     </div>
