al dia con botones

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             class="btn btn-info"
             id="btnupdate"
             name="btnupdate"
+            style="display: none"
           >
             Actualizar
           </button>
@@ -92,6 +93,7 @@
             class="btn btn-danger"
             id="btndelete"
             name="btndelete"
+            style="display: none"
           >
             Eliminar
           </button>
