codigo actualizado con clean delete

--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
           >
             Eliminar
           </button>
+          <button
+            type="button"
+            class="btn btn-secondary"
+            id="btnclean"
+            name="btnclean"
+          >
+            Limpiar
+          </button>
         </div>
       </form>
       <!-- TABLA -->
